hphp/test/zend/good/Zend/tests/bug30922.php.expectf

Fatal error: Keyword instanceOf must be written in lowercase in %s/bug30922.php on line 6
